After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 661147 - Wrong FSF address in copyright header
Wrong FSF address in copyright header
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: network
2.30.x
Other Linux
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2011-10-07 03:21 UTC by Michael Biebl
Modified: 2011-10-08 20:38 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Michael Biebl 2011-10-07 03:21:16 UTC
The copyright header uses the old and outdated address of the FSF and should be updated. The following files are affected in 2.30.0:

# licensecheck . -R | grep incorrect
./proxy/libproxy/glibproxyresolver.c: LGPL (v2 or later) (with incorrect FSF address) 
./proxy/libproxy/glibpacrunner.c: LGPL (v2 or later) (with incorrect FSF address) 
./proxy/libproxy/libproxy-module.c: LGPL (v2 or later) (with incorrect FSF address) 
./proxy/libproxy/glibproxyresolver.h: LGPL (v2 or later) (with incorrect FSF address) 
./proxy/gnome/gproxyresolvergnome.h: LGPL (v2 or later) (with incorrect FSF address) 
./proxy/gnome/gnome-proxy-module.c: LGPL (v2 or later) (with incorrect FSF address) 
./proxy/gnome/gproxyresolvergnome.c: LGPL (v2 or later) (with incorrect FSF address) 
./tls/tests/tls.c: LGPL (v2 or later) (with incorrect FSF address) 
./tls/gnutls/gtlsbackend-gnutls.c: LGPL (v2 or later) (with incorrect FSF address) 
./tls/gnutls/gnutls-module.c: LGPL (v2 or later) (with incorrect FSF address) 
./tls/gnutls/gtlsserverconnection-gnutls.c: LGPL (v2 or later) (with incorrect FSF address) 
./tls/gnutls/gtlsfiledatabase-gnutls.c: LGPL (v2 or later) (with incorrect FSF address) 
./tls/gnutls/gtlsoutputstream-gnutls.c: LGPL (v2 or later) (with incorrect FSF address) 
./tls/gnutls/gtlsdatabase-gnutls.c: LGPL (v2 or later) (with incorrect FSF address) 
./tls/gnutls/gtlsconnection-gnutls.c: LGPL (v2 or later) (with incorrect FSF address) 
./tls/gnutls/gtlsinputstream-gnutls.c: LGPL (v2 or later) (with incorrect FSF address) 
./tls/gnutls/gtlscertificate-gnutls.c: LGPL (v2 or later) (with incorrect FSF address) 
./tls/gnutls/gtlsclientconnection-gnutls.c: LGPL (v2 or later) (with incorrect FSF address)


For the proper boilerplate in the header see
http://www.gnu.org/licenses/old-licenses/lgpl-2.0.html
Comment 1 Dan Winship 2011-10-07 13:23:02 UTC
(In reply to comment #0)
> For the proper boilerplate in the header see
> http://www.gnu.org/licenses/old-licenses/lgpl-2.0.html

My understanding is that the preferred style now is to include the URL http://www.gnu.org/licenses/ rather than providing a snail mail address which is both less useful and more likely to get out of date again. But I can't currently find a page that actually contains that text for the LGPLv2...

But anyway, fixed in master.
Comment 2 Javier Jardón (IRC: jjardon) 2011-10-08 12:03:59 UTC
@Dan:

you are rigth, take a look at: http://www.gnu.org/licenses/gpl-howto.html
Comment 3 Michael Biebl 2011-10-08 20:38:58 UTC
(In reply to comment #1)
> (In reply to comment #0)
> > For the proper boilerplate in the header see
> > http://www.gnu.org/licenses/old-licenses/lgpl-2.0.html
> 
> My understanding is that the preferred style now is to include the URL
> http://www.gnu.org/licenses/ rather than providing a snail mail address which
> is both less useful and more likely to get out of date again. But I can't
> currently find a page that actually contains that text for the LGPLv2...

Yeah, from version 3 onwards the header no longer uses the FSF address.
I was using the license text for LGPLv2 though, as this is what glib-networking is using.