Fix up LGPL header comments

and remove legally-irrelevant "(C)"s from Copyright notices

https://bugzilla.gnome.org/show_bug.cgi?id=661147